Fix: z-index수정

--- a/src/styles/avatar.custom.css
+++ b/src/styles/avatar.custom.css
@@ -1,3 +1,6 @@
-.css-17o22dy-MuiAvatar-root {
+/* .css-17o22dy-MuiAvatar-root {
   z-index: 10;
+} */
+.MuiAvatar-colorDefault {
+  z-index: 100;
 }
